--- a/BuildingApi/packages.config
+++ b/BuildingApi/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Common.Logging" version="2.1.2" targetFramework="net451" />
+  <package id="Common.Logging" version="2.2.0" targetFramework="net451" />
+  <package id="Common.Logging.Core" version="2.2.0" targetFramework="net451" />
   <package id="Flurl" version="1.0.1" targetFramework="net451" />
-  <package id="Microsoft.Bcl" version="1.1.3" targetFramework="net451" />
-  <package id="Microsoft.Bcl.Build" version="1.0.10" targetFramework="net451" />
-  <package id="Microsoft.Net.Http" version="2.2.15" targetFramework="net451" />
-  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net451" />
+  <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net451" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net451" />
+  <package id="Microsoft.Net.Http" version="2.2.22" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net451" />
 </packages>
